[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=1]
[ext_resource path="res://sprites/background/teacher register & login bg.png" type="Texture" id=4]
[ext_resource path="res://Registration Login/Registration/Teacher Registration/TeacherRegistrationPage.gd" type="Script" id=5]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/buttons or icons/password label.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons or icons/confirm password label.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons or icons/email label.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons or icons/register button.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons or icons/name label.png" type="Texture" id=11]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=12]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[node name="TeacherRegistrationPage" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 104.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 352.0
margin_right = 592.0
margin_bottom = 522.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 632.0
margin_right = 600.0
margin_bottom = 802.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordLabel" type="TextureRect" parent="."]
margin_left = 888.0
margin_top = 632.0
margin_right = 1496.0
margin_bottom = 792.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="."]
margin_left = 488.0
margin_top = 392.0
margin_right = 976.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="."]
margin_left = 488.0
margin_top = 680.0
margin_right = 968.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordInput" type="LineEdit" parent="."]
margin_left = 1392.0
margin_top = 680.0
margin_right = 1872.0
margin_bottom = 752.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="TextureButton" parent="."]
margin_left = 696.0
margin_top = 918.0
margin_right = 1241.0
margin_bottom = 1075.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="TextureRect" parent="."]
margin_left = 880.0
margin_top = 352.0
margin_right = 1504.0
margin_bottom = 522.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="."]
margin_left = 1392.0
margin_top = 392.0
margin_right = 1872.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoMatchLabel" type="Label" parent="."]
margin_left = 1336.0
margin_top = 776.0
margin_right = 1916.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.0313726, 0.0313726, 1 )
text = "passwords 
do not match!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -155.5
margin_right = 261.5
margin_bottom = 155.5
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Popup"]
margin_left = 406.476
margin_top = 42.8811
margin_right = 470.476
margin_bottom = 95.8811
texture_normal = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 76.0
margin_top = 102.0
margin_right = 435.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="text_entered" from="EmailInput" to="." method="_on_EmailInput_text_entered"]
[connection signal="pressed" from="Popup/CloseButton" to="." method="_on_CloseButton_pressed"]
